[iOS] Date and time form controls are presented at the wrong size in some modes https://bugs.webkit.org/show_bug.cgi?id=210194 <rdar://problem/60385475>

Reviewed by Tim Horton.

Instead of relying on the default size for date/time controls, we should let the
UIDatePicker determine its own size given the configuration we're going to use.

* UIProcess/ios/forms/WKFormInputControl.mm:
(-[WKDateTimePicker initWithView:datePickerMode:]):
(-[WKDateTimePopover initWithView:datePickerMode:]):
* UIProcess/ios/forms/WKFormSelectPopover.mm:
(-[WKSelectPopover initWithView:hasGroups:]):


Canonical link: https://commits.webkit.org/223166@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259806 268f45cc-cd09-0410-ab3c-d52691b4dbfc